[package]
name = "steak-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "steak_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
num_enum = "0.5.7"
anchor-spl = {version="0.26.0"}
mpl-token-metadata = "1.4.3"